--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@oumla/sdk",
   "version": "0.0.1",
-  "description": "simple SDK",
+  "description": "Oumla SDK is the fastest way to integrate with blockchain networks",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.mjs",
