--- a/sdks/typescript/package.json
+++ b/sdks/typescript/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@oumla/sdk",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "type": "module",
   "description": "Official TypeScript SDK for Oumla - Blockchain integration made simple",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     }
   },
