ci: configure npm registry for package publishing

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-auto-install-peers=false
+registry=https://registry.npmjs.org/
+@oumla:registry=https://registry.npmjs.org/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+always-auth=true
